20000205-13:06 GMT+1 Victor Szakats <info@szelvesz.hu>
   * tests/db_brows.prg
     ! UPDATED() removed, since it's now defined in the RTL.
   * include/rddapi.h
     source/tools/dbftools.c
     * hb_rdd*() function declration moved to rddapi.h
   * source/tools/dbftools.c
     ! Removed #includes not needed. Especially windows.h.
   * source/compiler/hbusage.c
     + Note added about switch character.

20000205-00:32 GMT+1 Victor Szakats <info@szelvesz.hu>
   * source/tools/Makefile
     + dbftools.c added.
     + html.prg, ng.prg, os2.prg, troff.prg, etc. added.
   * doc/hdr_tpl.txt
     * Year changed to 2000
   * source/rdd/dbcmd.c
     source/rtl/inkey.c
     source/rtl/array.c
     source/pp/hbpp.c
     * Minor formatting fixes.

20000204-23:10 GMT+1 Antonio Linares <alinares@fivetech.com>
  * source/rtl/inkey.c
    * static int s_iMouseCol = 0, s_iMouseRow = 0;
    (changed SHORT into int accordingly to Dave proposal).

20000204-19:25 GMT-3 Luiz Rafael Culik <culik@sl.conex.net>
    *Source/rdd/dbcmd.c
        * Change some functions docs
    *ngdoc/harbwww.rps
        *Small changes
    *source/rtl/inkey.c
        * Small changes on MCOL() and MROW() function docs

20000204-20:45 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.y
    *source/compiler/harbour.c
	* fixed initialization of static variable with dimmed array
	STATIC var[ 2 ]

    *source/rtl/inkey.c
	* fixed s_iMouseCol/s_iMouseRow if compiled with GCC/LINUX

20000204-22:12 GMT+3 Alexander Kresin
   * source/rdd/dbcmd.c
     + added hb_rddGetCurrentWorkAreaPointer() function
   + source/rtl/tools/dbftools.c
     Some Clipper Tools compatible functions
   * contrib/rdd_ads/ads1.c
     * Bugs fixed related to lock/unlock
     * Memo support added

20000204-14:47 GMT+1 Victor Szakats <info@szelvesz.hu>
   * source/rtl/itemapi.c
     ! hb_itemNew() fixed to set the item type *after* filling the item
       structure with zeros. It won't set the type at all when a param other